* Sat Dec 19 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.0.4
- Removed EL6 support

* Wed Apr 01 2020 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 0.0.3
- Add support for EL8

* Tue Jul 02 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.0.2
- Update documentation
- Support puppetlabs-stdlib 6

* Wed Feb 27 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 0.0.1
- This is the initial code for a `pupmod-simp-rkhunter` module, which
  installs and configures rkhunter and unhide.