@@ -1,9 +1,10 @@
 # Reference
+
 <!-- DO NOT EDIT: This document was generated by Puppet Strings -->
 
 ## Table of Contents
 
-**Classes**
+### Classes
 
 * [`rkhunter`](#rkhunter): Installs rkhunter and sets up cron job to run rkhunter once per day
 * [`rkhunter::check`](#rkhuntercheck): Sets a cron job for rkhunter to check the system
@@ -11,13 +12,13 @@
 * [`rkhunter::install`](#rkhunterinstall): Install rkhunter
 * [`rkhunter::update`](#rkhunterupdate): Add a cron job to check for rkhunter updates
 
-**Data types**
+### Data types
 
 * [`Rkhunter::BindPath`](#rkhunterbindpath): matches valid binddir path accepts absolute path or an absolute path with a '+' proceeding it
 
 ## Classes
 
-### rkhunter
+### `rkhunter`
 
 Installs rkhunter and sets up cron job to run rkhunter once per day
 
@@ -31,7 +32,7 @@ Data type: `Boolean`
 
 Check internet for definition updates
 
-Default value: `false`
+Default value: ``false``
 
 ##### `enable_system_check`
 
@@ -39,7 +40,7 @@ Data type: `Boolean`
 
 Set rkhunter to check the system on a regular basis
 
-Default value: `true`
+Default value: ``true``
 
 ##### `install_optional_packages`
 
@@ -47,9 +48,9 @@ Data type: `Boolean`
 
 Install packages that enhance the capabilities of rkhunter
 
-Default value: `true`
+Default value: ``true``
 
-### rkhunter::check
+### `rkhunter::check`
 
 Sets a cron job for rkhunter to check the system
 
@@ -63,7 +64,7 @@ Data type: `Simplib::Cron::Minute`
 
 Cron minute
 
-Default value: 25
+Default value: `25`
 
 ##### `hour`
 
@@ -71,7 +72,7 @@ Data type: `Simplib::Cron::Hour`
 
 Cron hour
 
-Default value: 0
+Default value: `0`
 
 ##### `monthday`
 
@@ -79,7 +80,7 @@ Data type: `Simplib::Cron::MonthDay`
 
 Cron monthday
 
-Default value: '*'
+Default value: `'*'`
 
 ##### `month`
 
@@ -87,7 +88,7 @@ Data type: `Simplib::Cron::Month`
 
 Cron month
 
-Default value: '*'
+Default value: `'*'`
 
 ##### `weekday`
 
@@ -95,7 +96,7 @@ Data type: `Simplib::Cron::Weekday`
 
 Cron weekday
 
-Default value: '*'
+Default value: `'*'`
 
 ##### `options`
 
@@ -103,9 +104,9 @@ Data type: `Array[String[1]]`
 
 Options to pass to ``rkhunter --check``
 
-Default value: [ '--skip-keypress', '--quiet' ]
+Default value: `[ '--skip-keypress', '--quiet' ]`
 
-### rkhunter::config
+### `rkhunter::config`
 
 Any parameter that is not documented below matches its direct counterpart in
 the `rkhunter.conf` configuration file.
@@ -137,13 +138,19 @@ Data type: `Array[Stdlib::Unixpath]`
 
 In module data
 
+##### `user_fileprop_files_dirs`
+
+Data type: `Array[Stdlib::Unixpath]`
+
+In module data
+
 ##### `allowipcpid`
 
 Data type: `Optional[Array[Integer[1]]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `allowipcproc`
 
@@ -151,7 +158,7 @@ Data type: `Optional[Array[Stdlib::Unixpath]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `allowipcuser`
 
@@ -159,7 +166,7 @@ Data type: `Optional[Array[String[1]]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `allowprocdelfile`
 
@@ -167,7 +174,7 @@ Data type: `Optional[Array[Stdlib::Unixpath]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `allowproclisten`
 
@@ -175,7 +182,7 @@ Data type: `Optional[Array[Stdlib::Unixpath]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `allowpromiscif`
 
@@ -183,7 +190,7 @@ Data type: `Optional[Array[String[1]]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `allow_ssh_prot_v1`
 
@@ -191,7 +198,7 @@ Data type: `Boolean`
 
 
 
-Default value: `false`
+Default value: ``false``
 
 ##### `allow_ssh_root_user`
 
@@ -199,7 +206,7 @@ Data type: `Variant[Boolean,Enum['unset']]`
 
 
 
-Default value: `false`
+Default value: ``false``
 
 ##### `allow_syslog_remote_logging`
 
@@ -207,7 +214,7 @@ Data type: `Boolean`
 
 
 
-Default value: `true`
+Default value: ``true``
 
 ##### `append_log`
 
@@ -215,7 +222,7 @@ Data type: `Boolean`
 
 
 
-Default value: `false`
+Default value: ``false``
 
 ##### `app_whitelist`
 
@@ -223,7 +230,7 @@ Data type: `Optional[Array[String[1]]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `attrwhitelist`
 
@@ -231,7 +238,7 @@ Data type: `Optional[Array[Stdlib::Unixpath]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `auto_x_detect`
 
@@ -239,7 +246,7 @@ Data type: `Boolean`
 
 
 
-Default value: `true`
+Default value: ``true``
 
 ##### `bindir`
 
@@ -247,7 +254,7 @@ Data type: `Optional[Array[Rkhunter::BindPath]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `color_set2`
 
@@ -255,7 +262,7 @@ Data type: `Boolean`
 
 
 
-Default value: `false`
+Default value: ``false``
 
 ##### `copy_log_on_error`
 
@@ -263,7 +270,7 @@ Data type: `Boolean`
 
 
 
-Default value: `false`
+Default value: ``false``
 
 ##### `dbdir`
 
@@ -271,7 +278,7 @@ Data type: `Stdlib::Unixpath`
 
 
 
-Default value: '/var/lib/rkhunter/db'
+Default value: `'/var/lib/rkhunter/db'`
 
 ##### `disable_tests`
 
@@ -281,7 +288,7 @@ While the default of rkhunter is to disable none of its tests, these tests
 are recommended to be disabled for normal runs due to their system intesive
 nature and the fact they are prone to false positives.
 
-Default value: ['suspscan', 'hidden_ports', 'hidden_procs', 'deleted_files', 'packet_cap_apps', 'apps']
+Default value: `['suspscan', 'hidden_ports', 'hidden_procs', 'deleted_files', 'packet_cap_apps', 'apps']`
 
 ##### `empty_logfiles`
 
@@ -289,7 +296,7 @@ Data type: `Optional[Array[Stdlib::Unixpath]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `enable_tests`
 
@@ -297,7 +304,7 @@ Data type: `Array[String[1]]`
 
 
 
-Default value: ['ALL']
+Default value: `['ALL']`
 
 ##### `epoch_date_cmd`
 
@@ -305,7 +312,7 @@ Data type: `Optional[String[1]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `exclude_user_fileprop_files_dirs`
 
@@ -313,7 +320,7 @@ Data type: `Optional[Array[Stdlib::Unixpath]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `existwhitelist`
 
@@ -321,7 +328,7 @@ Data type: `Optional[Array[Stdlib::Unixpath]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `globstar`
 
@@ -329,7 +336,7 @@ Data type: `Boolean`
 
 
 
-Default value: `true`
+Default value: ``true``
 
 ##### `hash_cmd`
 
@@ -337,7 +344,7 @@ Data type: `Optional[String[1]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `hash_fld_idx`
 
@@ -345,7 +352,7 @@ Data type: `Optional[Integer[1]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `ignore_prelink_dep_err`
 
@@ -353,7 +360,7 @@ Data type: `Optional[Array[Stdlib::Unixpath]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `immutable_set`
 
@@ -361,7 +368,7 @@ Data type: `Boolean`
 
 
 
-Default value: `false`
+Default value: ``false``
 
 ##### `immutwhitelist`
 
@@ -369,7 +376,7 @@ Data type: `Optional[Array[Stdlib::Unixpath]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `inetd_allowed_svc`
 
@@ -377,7 +384,7 @@ Data type: `Optional[Array[String[1]]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `inetd_conf_path`
 
@@ -385,7 +392,7 @@ Data type: `Optional[Stdlib::Unixpath]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `installdir`
 
@@ -393,7 +400,7 @@ Data type: `Stdlib::Unixpath`
 
 
 
-Default value: '/usr'
+Default value: `'/usr'`
 
 ##### `ipc_seg_size`
 
@@ -401,7 +408,7 @@ Data type: `Optional[Integer[1]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `language`
 
@@ -409,7 +416,7 @@ Data type: `Optional[String[1]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `lock_timeout`
 
@@ -417,7 +424,7 @@ Data type: `Optional[Integer[1]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `lockdir`
 
@@ -425,7 +432,7 @@ Data type: `Stdlib::Unixpath`
 
 
 
-Default value: '/var/run/lock'
+Default value: `'/var/run/lock'`
 
 ##### `logfile`
 
@@ -433,7 +440,7 @@ Data type: `Stdlib::Unixpath`
 
 
 
-Default value: '/var/log/rkhunter/rkhunter.log'
+Default value: `'/var/log/rkhunter/rkhunter.log'`
 
 ##### `mail_on_warning`
 
@@ -441,7 +448,7 @@ Data type: `Optional[Array[String[1]]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `mail_cmd`
 
@@ -449,7 +456,7 @@ Data type: `String[1]`
 
 
 
-Default value: 'mail -s "[rkhunter] Warnings found for ${HOST_NAME}"'
+Default value: `'mail -s "[rkhunter] Warnings found for ${HOST_NAME}"'`
 
 ##### `mirrors_mode`
 
@@ -457,7 +464,7 @@ Data type: `Enum['any','local','remote']`
 
 
 
-Default value: 'any'
+Default value: `'any'`
 
 ##### `missing_logfiles`
 
@@ -465,7 +472,7 @@ Data type: `Optional[Array[Stdlib::Unixpath]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `modules_dir`
 
@@ -473,7 +480,7 @@ Data type: `Optional[Stdlib::Unixpath]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `os_version_file`
 
@@ -481,7 +488,7 @@ Data type: `Optional[Stdlib::Unixpath]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `password_file`
 
@@ -489,7 +496,7 @@ Data type: `Optional[Stdlib::Unixpath]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `phalanx2_dirtest`
 
@@ -497,7 +504,7 @@ Data type: `Boolean`
 
 
 
-Default value: `false`
+Default value: ``false``
 
 ##### `pkgmgr_no_vrfy`
 
@@ -505,7 +512,7 @@ Data type: `Optional[Array[Stdlib::Unixpath]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `pkgmgr`
 
@@ -513,7 +520,7 @@ Data type: `String[1]`
 
 
 
-Default value: 'RPM'
+Default value: `'RPM'`
 
 ##### `port_path_whitelist`
 
@@ -521,7 +528,7 @@ Data type: `Optional[Array[Stdlib::Unixpath]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `tcp_port_whitelist`
 
@@ -529,7 +536,7 @@ Data type: `Optional[Array[Simplib::Port]]`
 
 TCP Ports to add to the PORT_WHITELIST option
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `udp_port_whitelist`
 
@@ -537,7 +544,7 @@ Data type: `Optional[Array[Simplib::Port]]`
 
 UDP Ports to add to the PORT_WHITELIST option
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `pwdless_accounts`
 
@@ -545,7 +552,7 @@ Data type: `Optional[Array[String[1]]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `readlink_cmd`
 
@@ -553,7 +560,7 @@ Data type: `Optional[String[1]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `rotate_mirrors`
 
@@ -561,7 +568,7 @@ Data type: `Boolean`
 
 
 
-Default value: `true`
+Default value: ``true``
 
 ##### `rtkt_dir_whitelist`
 
@@ -569,7 +576,7 @@ Data type: `Optional[Array[Stdlib::Unixpath]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `rtkt_file_whitelist`
 
@@ -577,7 +584,7 @@ Data type: `Optional[Array[Stdlib::Unixpath]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `scan_mode_dev`
 
@@ -585,7 +592,7 @@ Data type: `Enum['THOROUGH','LAZY']`
 
 
 
-Default value: 'THOROUGH'
+Default value: `'THOROUGH'`
 
 ##### `scanrootkitmode`
 
@@ -594,7 +601,7 @@ Data type: `Boolean`
 WARNING: Do not enable this parameter unless you 100% understand what it
 can do to your system performance!
 
-Default value: `false`
+Default value: ``false``
 
 ##### `scriptdir`
 
@@ -602,7 +609,7 @@ Data type: `Stdlib::Unixpath`
 
 
 
-Default value: '/usr/share/rkhunter/scripts'
+Default value: `'/usr/share/rkhunter/scripts'`
 
 ##### `scriptwhitelist`
 
@@ -610,7 +617,7 @@ Data type: `Optional[Array[Stdlib::Unixpath]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `shared_lib_whitelist`
 
@@ -618,7 +625,7 @@ Data type: `Optional[Array[Stdlib::Unixpath]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `show_lock_msgs`
 
@@ -626,7 +633,7 @@ Data type: `Boolean`
 
 
 
-Default value: `true`
+Default value: ``true``
 
 ##### `show_summary_time`
 
@@ -634,7 +641,7 @@ Data type: `Integer[0,3]`
 
 
 
-Default value: 3
+Default value: `3`
 
 ##### `show_summary_warnings_number`
 
@@ -642,7 +649,7 @@ Data type: `Boolean`
 
 
 
-Default value: `false`
+Default value: ``false``
 
 ##### `skip_inode_check`
 
@@ -650,7 +657,7 @@ Data type: `Boolean`
 
 
 
-Default value: `false`
+Default value: ``false``
 
 ##### `ssh_config_dir`
 
@@ -658,7 +665,7 @@ Data type: `Optional[Stdlib::Unixpath]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `startup_paths`
 
@@ -666,7 +673,7 @@ Data type: `Optional[Array[Stdlib::Unixpath]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `stat_cmd`
 
@@ -674,7 +681,7 @@ Data type: `Optional[String[1]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `suspscan_dirs`
 
@@ -682,7 +689,7 @@ Data type: `Optional[Array[Stdlib::Unixpath]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `suspscan_maxsize`
 
@@ -690,7 +697,7 @@ Data type: `Integer[0]`
 
 
 
-Default value: 1024000
+Default value: `1024000`
 
 ##### `suspscan_temp`
 
@@ -698,7 +705,7 @@ Data type: `Stdlib::Unixpath`
 
 
 
-Default value: '/dev/shm'
+Default value: `'/dev/shm'`
 
 ##### `suspscan_thresh`
 
@@ -706,7 +713,7 @@ Data type: `Integer[0]`
 
 
 
-Default value: 200
+Default value: `200`
 
 ##### `suspscan_whitelist`
 
@@ -714,7 +721,7 @@ Data type: `Optional[Array[Stdlib::Unixpath]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `syslog_config_file`
 
@@ -722,7 +729,7 @@ Data type: `Optional[Array[Stdlib::Unixpath]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `tmpdir`
 
@@ -730,7 +737,7 @@ Data type: `Stdlib::Unixpath`
 
 
 
-Default value: '/var/lib/rkhunter'
+Default value: `'/var/lib/rkhunter'`
 
 ##### `uid0_accounts`
 
@@ -738,7 +745,7 @@ Data type: `Optional[Array[String[1]]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `unhide_tests`
 
@@ -746,7 +753,7 @@ Data type: `Optional[Array[String[1]]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `unhidetcp_opts`
 
@@ -754,7 +761,7 @@ Data type: `Optional[Array[String[1]]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `update_lang`
 
@@ -762,7 +769,7 @@ Data type: `Optional[Array[String[1]]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `update_mirrors`
 
@@ -770,7 +777,7 @@ Data type: `Boolean`
 
 
 
-Default value: `true`
+Default value: ``true``
 
 ##### `updt_on_os_change`
 
@@ -778,7 +785,7 @@ Data type: `Boolean`
 
 
 
-Default value: `false`
+Default value: ``false``
 
 ##### `use_locking`
 
@@ -786,15 +793,7 @@ Data type: `Boolean`
 
 
 
-Default value: `true`
-
-##### `user_fileprop_files_dirs`
-
-Data type: `Optional[Array[Stdlib::Unixpath]]`
-
-
-
-Default value: `undef`
+Default value: ``true``
 
 ##### `use_sunsum`
 
@@ -802,7 +801,7 @@ Data type: `Boolean`
 
 
 
-Default value: `false`
+Default value: ``false``
 
 ##### `syslog_priority`
 
@@ -810,7 +809,7 @@ Data type: `Simplib::Syslog::Priority`
 
 
 
-Default value: 'LOCAL6.NOTICE'
+Default value: `'LOCAL6.NOTICE'`
 
 ##### `use_syslog`
 
@@ -818,7 +817,7 @@ Data type: `Boolean`
 
 
 
-Default value: `true`
+Default value: ``true``
 
 ##### `warn_on_os_change`
 
@@ -826,7 +825,7 @@ Data type: `Boolean`
 
 
 
-Default value: `true`
+Default value: ``true``
 
 ##### `web_cmd`
 
@@ -834,7 +833,7 @@ Data type: `Optional[String[1]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `whitelisted_is_white`
 
@@ -842,7 +841,7 @@ Data type: `Boolean`
 
 
 
-Default value: `false`
+Default value: ``false``
 
 ##### `writewhitelist`
 
@@ -850,7 +849,7 @@ Data type: `Optional[Array[Stdlib::Unixpath]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `xinetd_allowed_svc`
 
@@ -858,7 +857,7 @@ Data type: `Optional[Array[String[1]]]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `xinetd_conf_path`
 
@@ -866,9 +865,9 @@ Data type: `Optional[Stdlib::Unixpath]`
 
 
 
-Default value: `undef`
+Default value: ``undef``
 
-### rkhunter::install
+### `rkhunter::install`
 
 Install rkhunter
 
@@ -882,7 +881,7 @@ Data type: `Boolean`
 
 Install optional packages that enable additional functionality in rkhunter
 
-Default value: $rkhunter::install_optional_packages
+Default value: `$rkhunter::install_optional_packages`
 
 ##### `optional_packages`
 
@@ -893,7 +892,7 @@ The list of optional packages to be installed
 This may be anything that the puppetlabs-stdlib ``ensure_packages``
 function accepts
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `optional_package_ensure`
 
@@ -901,7 +900,7 @@ Data type: `Simplib::PackageEnsure`
 
 The state in which to place all packages
 
-Default value: simplib::lookup('simp_options::package_ensure', { 'default_value' => 'installed' })
+Default value: `simplib::lookup('simp_options::package_ensure', { 'default_value' => 'installed' })`
 
 ##### `rkhunter_package_ensure`
 
@@ -910,9 +909,9 @@ Data type: `String[1]`
 The state in which to place the rkhunter package. May be specifically
 pinned.
 
-Default value: simplib::lookup('simp_options::package_ensure', { 'default_value' => 'installed' })
+Default value: `simplib::lookup('simp_options::package_ensure', { 'default_value' => 'installed' })`
 
-### rkhunter::update
+### `rkhunter::update`
 
 Add a cron job to check for rkhunter updates
 
@@ -926,7 +925,7 @@ Data type: `Simplib::Cron::Minute`
 
 Cron minute
 
-Default value: 5
+Default value: `5`
 
 ##### `hour`
 
@@ -934,7 +933,7 @@ Data type: `Simplib::Cron::Hour`
 
 Cron hour
 
-Default value: 0
+Default value: `0`
 
 ##### `monthday`
 
@@ -942,7 +941,7 @@ Data type: `Simplib::Cron::MonthDay`
 
 Cron monthday
 
-Default value: '*'
+Default value: `'*'`
 
 ##### `month`
 
@@ -950,7 +949,7 @@ Data type: `Simplib::Cron::Month`
 
 Cron month
 
-Default value: '*'
+Default value: `'*'`
 
 ##### `weekday`
 
@@ -958,7 +957,7 @@ Data type: `Simplib::Cron::Weekday`
 
 Cron weekday
 
-Default value: '*'
+Default value: `'*'`
 
 ##### `options`
 
@@ -966,11 +965,11 @@ Data type: `Array[String[1]]`
 
 Extra options to pass to ``rkhunter --update``
 
-Default value: ['--nocolors']
+Default value: `['--nocolors']`
 
 ## Data types
 
-### Rkhunter::BindPath
+### `Rkhunter::BindPath`
 
 matches valid binddir path
 accepts absolute path or an absolute path
