@@ -46,7 +46,7 @@
   "requirements": [
     {
       "name": "puppet",
-      "version_requirement": ">= 5.5.7 < 7.0.0"
+      "version_requirement": ">= 5.5.7 < 8.0.0"
     }
   ]
 }
