@@ -1,3 +1,8 @@
+* Tue Jan 12 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.0.4
+- Added Puppet 7 support
+- Added default user_fileprop_files_dirs to cover the puppet apps
+- Added PostgreSQL to the allowed items in /dev/shm for puppetdb
+
 * Sat Dec 19 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.0.4
 - Removed EL6 support
 
